--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
 		"mini-css-extract-plugin": "2.4.5",
 		"papaparse": "5.4.1",
 		"react": "18.2.0",
+		"react-csv": "2.2.2",
 		"react-dom": "18.2.0",
 		"react-force-graph": "^1.41.0",
 		"react-grid-layout": "^1.3.4",
@@ -131,6 +132,7 @@
 		"@types/node": "^16.10.3",
 		"@types/papaparse": "5.3.7",
 		"@types/react": "18.0.26",
+		"@types/react-csv": "1.1.3",
 		"@types/react-dom": "18.0.10",
 		"@types/react-grid-layout": "^1.1.2",
 		"@types/react-redux": "^7.1.11",
