--- a/deploy/docker-swarm/clickhouse-setup/docker-compose.yaml
+++ b/deploy/docker-swarm/clickhouse-setup/docker-compose.yaml
@@ -1,37 +1,5 @@
 version: "3.9"
 
-x-clickhouse-defaults: &clickhouse-defaults
-  image: clickhouse/clickhouse-server:22.8.8-alpine
-  tty: true
-  deploy:
-    restart_policy:
-      condition: on-failure
-  depends_on:
-    - zookeeper-1
-    # - zookeeper-2
-    # - zookeeper-3
-  logging:
-    options:
-      max-size: 50m
-      max-file: "3"
-  healthcheck:
-    # "clickhouse", "client", "-u ${CLICKHOUSE_USER}", "--password ${CLICKHOUSE_PASSWORD}", "-q 'SELECT 1'"
-    test: ["CMD", "wget", "--spider", "-q", "localhost:8123/ping"]
-    interval: 30s
-    timeout: 5s
-    retries: 3
-  ulimits:
-    nproc: 65535
-    nofile:
-      soft: 262144
-      hard: 262144
-
-x-clickhouse-depend: &clickhouse-depend
-  depends_on:
-    - clickhouse
-    # - clickhouse-2
-    # - clickhouse-3
-
 services:
   zookeeper-1:
     image: bitnami/zookeeper:3.7.1
@@ -80,20 +48,6 @@ services:
   #     - ZOO_SERVERS=zookeeper-1:2888:3888,zookeeper-2:2888:3888,0.0.0.0:2888:3888
   #     - ALLOW_ANONYMOUS_LOGIN=yes
   #     - ZOO_AUTOPURGE_INTERVAL=1
-
-  clickhouse:
-    <<: *clickhouse-defaults
-    hostname: clickhouse
-    # ports:
-    #   - "9000:9000"
-    #   - "8123:8123"
-    #   - "9181:9181"
-    volumes:
-      - ./clickhouse-config.xml:/etc/clickhouse-server/config.xml
-      - ./clickhouse-users.xml:/etc/clickhouse-server/users.xml
-      - ./clickhouse-cluster.xml:/etc/clickhouse-server/config.d/cluster.xml
-      # - ./clickhouse-storage.xml:/etc/clickhouse-server/config.d/storage.xml
-      - ./data/clickhouse/:/var/lib/clickhouse/
 
   # clickhouse-2:
   #   <<: *clickhouse-defaults
@@ -153,7 +107,7 @@ services:
       - DASHBOARDS_PATH=/root/config/dashboards
       - STORAGE=clickhouse
       - GODEBUG=netdns=go
-      - TELEMETRY_ENABLED=true
+      - TELEMETRY_ENABLED=false
       - DEPLOYMENT_TYPE=docker-swarm
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "localhost:8080/api/v1/health"]
@@ -163,7 +117,6 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
-    <<: *clickhouse-depend
 
   frontend:
     image: signoz/frontend:0.25.0
@@ -205,7 +158,6 @@ services:
       mode: global
       restart_policy:
         condition: on-failure
-    <<: *clickhouse-depend
 
   otel-collector-metrics:
     image: signoz/signoz-otel-collector:0.79.4
@@ -220,28 +172,3 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
-    <<: *clickhouse-depend
-
-  hotrod:
-    image: jaegertracing/example-hotrod:1.30
-    command: ["all"]
-    environment:
-      - JAEGER_ENDPOINT=http://otel-collector:14268/api/traces
-    logging:
-      options:
-        max-size: 50m
-        max-file: "3"
-
-  load-hotrod:
-    image: "signoz/locust:1.2.3"
-    hostname: load-hotrod
-    environment:
-      ATTACKED_HOST: http://hotrod:8080
-      LOCUST_MODE: standalone
-      NO_PROXY: standalone
-      TASK_DELAY_FROM: 5
-      TASK_DELAY_TO: 30
-      QUIET_MODE: "${QUIET_MODE:-false}"
-      LOCUST_OPTS: "--headless -u 10 -r 1"
-    volumes:
-      - ../common/locust-scripts:/locust
